src/index.css
@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300;400;500;600;700;800&display=swap');
@import-normalize;

@tailwind base;
@tailwind components;
@tailwind utilities;

*,
::before,
::after {
  border-color: #eee;
}

body {
  @apply font-mono text-base tracking-tight min-w-[1080px];
  word-spacing: -0.1em;
}

h4 {
  @apply text-lg;
  font-weight: 500;
}

*:focus {
  outline: none;
}

input {
  width: 100%;
  border-sizing: border-box;
}

/* hide input number inner buttons */
input[type='number'] {
  -moz-appearance: textfield; /* Firefox */
}
input[type='number']::-webkit-inner-spin-button,
input[type='number']::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* z-index */
.tooltip .tooltip-tip {
  @apply z-50;
}
.TradeBar,
.modal {
  @apply z-40;
}
.Header {
  @apply z-30;
}
.select ul[role='listbox'],
.dropdown [role='menu'] {
  @apply z-20;
}
.popover-panel {
  @apply z-20;
}
.backdrop {
  @apply z-10;
}

